@@ -1,38 +1,24 @@
 package com.auction.manager;
 
 import com.auction.model.entity.Auction;
-import com.auction.model.entity.BidTransaction;
 import com.auction.model.enums.AuctionStatus;
 
 import java.time.LocalDateTime;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.concurrent.Executors;
 import java.util.concurrent.ScheduledExecutorService;
 import java.util.concurrent.TimeUnit;
 
-/**
- * Singleton quản lý toàn bộ các phiên đấu giá trong hệ thống.
- * Lưu danh sách tất cả Auction (active + closed)
- * Định kỳ kiểm tra và tự động đóng các phiên hết hạn
- * Hỗ trợ xử lý concurrent bids thông qua locking bên trong Auction
- */
 public class AuctionManager {
 
-    // ── Singleton ─────────────────────────────────────────────────────────────
-
     private static volatile AuctionManager instance;
-    //Tác dụng của volatile ở đây giải quyết 2 bài toán sống còn khi có nhiều luồng cùng chạy một lúc
-
 
     private final List<Auction> activeAuctions;
-    private final ScheduledExecutorService scheduler;
 
     private AuctionManager() {
         this.activeAuctions = new ArrayList<>();
-        // Scheduler kiểm tra mỗi 5 giây
-        this.scheduler = Executors.newSingleThreadScheduledExecutor(r -> {
+        ScheduledExecutorService scheduler = Executors.newSingleThreadScheduledExecutor(r -> {
             Thread t = new Thread(r, "AuctionManager-Scheduler");
             t.setDaemon(true);
             return t;
@@ -40,9 +26,6 @@ public class AuctionManager {
         scheduler.scheduleAtFixedRate(this::checkAndCloseExpiredAuctions, 5, 5, TimeUnit.SECONDS);
     }
 
-    /**
-     * Trả về instance duy nhất (thread-safe, double-checked locking).
-     */
     public static AuctionManager getInstance() {
         if (instance == null) {
             synchronized (AuctionManager.class) {
@@ -54,13 +37,7 @@ public class AuctionManager {
         return instance;
     }
 
-    // ── Auction management ────────────────────────────────────────────────────
 
-    /**
-     * Đăng ký phiên đấu giá mới vào hệ thống.
-     *
-     * @param auction phiên cần thêm
-     */
     public synchronized void registerAuction(Auction auction) {
         if (auction == null) throw new IllegalArgumentException("Auction không được null.");
         if (!activeAuctions.contains(auction)) {
@@ -70,11 +47,6 @@ public class AuctionManager {
         }
     }
 
-    /**
-     * Bắt đầu một phiên đấu giá đã đăng ký.
-     *
-     * @param auction phiên cần bắt đầu
-     */
     public void startAuction(Auction auction) {
         if (!activeAuctions.contains(auction)) {
             throw new IllegalArgumentException("Phiên chưa được đăng ký vào AuctionManager.");
@@ -82,26 +54,19 @@ public class AuctionManager {
         auction.startAuction();
     }
 
-    /**
-     * Tự động kiểm tra và đóng các phiên đã hết thời gian.
-     * Được gọi định kỳ bởi scheduler.
-     */
     public synchronized void checkAndCloseExpiredAuctions() {
         LocalDateTime now = LocalDateTime.now();
         for (Auction auction : activeAuctions) {
-            // Chuyển RUNNING -> FINISHED nếu hết thời gian
             if (auction.getStatus() == AuctionStatus.RUNNING && auction.isExpired()) {
                 System.out.printf("[AuctionManager] Phiên [%s] hết hạn → tự động đóng.%n",
                         auction.getId());
                 auction.endAuction();
             }
-            // Chuyển OPEN → RUNNING nếu đến giờ bắt đầu
             if (auction.getStatus() == AuctionStatus.OPEN
                     && !auction.getStartTime().isAfter(now)) {
                 auction.startAuction();
             }
 
-            // Tự động HỦY phiên nếu ở trạng thái FINISHED quá 12 giờ mà chưa thanh toán
             if (auction.getStatus() == AuctionStatus.FINISHED && auction.getFinishedTime() != null) {
                 if (now.isAfter(auction.getFinishedTime().plusHours(12))) {
                     System.out.printf("[AuctionManager] Phiên [%s] quá hạn thanh toán 12h → tự động HỦY.%n",
@@ -112,66 +77,11 @@ public class AuctionManager {
         }
     }
 
-    /**
-     * Xử lý concurrent bid: delegate đến Auction.placeBid() đã có lock.
-     * Phương thức này là entry point cho server khi nhận bid từ client.
-     *
-     * @param bid giao dịch đặt giá từ client
-     * @return true nếu bid được chấp nhận
-     */
-    public boolean processConcurrentBid(BidTransaction bid) {
-        if (bid == null) throw new IllegalArgumentException("BidTransaction không được null.");
-        return bid.getAuction().placeBid(bid);
-    }
 
-    /**
-     * Lấy danh sách các phiên đang RUNNING.
-     */
-    public synchronized List<Auction> getRunningAuctions() {
-        List<Auction> running = new ArrayList<>();
-        for (Auction a : activeAuctions) {
-            if (a.getStatus() == AuctionStatus.RUNNING) running.add(a);
-        }
-        return Collections.unmodifiableList(running);
-    }
-
-    /**
-     * Lấy toàn bộ danh sách phiên (bao gồm đã đóng).
-     */
     public synchronized List<Auction> getAllAuctions() {
-        return Collections.unmodifiableList(new ArrayList<>(activeAuctions));
+        return List.copyOf(activeAuctions);
     }
 
-    /**
-     * Tìm phiên theo id.
-     *
-     * @param id id cần tìm
-     * @return Auction nếu tìm thấy, null nếu không
-     */
-    public synchronized Auction findById(String id) {
-        return activeAuctions.stream()
-                .filter(a -> a.getId().equals(id))
-                .findFirst()
-                .orElse(null);
-    }
-
-    /**
-     * In tổng quan hệ thống (dùng cho Admin)
-     */
-    public synchronized void printSystemSummary() {
-        System.out.println("=== Tổng quan hệ thống ===");
-        System.out.printf("  Tổng số phiên: %d%n", activeAuctions.size());
-        long running = activeAuctions.stream()
-                .filter(a -> a.getStatus() == AuctionStatus.RUNNING).count();
-        long finished = activeAuctions.stream()
-                .filter(a -> a.getStatus() == AuctionStatus.FINISHED).count();
-        long canceled = activeAuctions.stream()
-                .filter(a -> a.getStatus() == AuctionStatus.CANCELED).count();
-        System.out.printf("  RUNNING: %d | FINISHED: %d | CANCELED: %d%n",
-                running, finished, canceled);
-        System.out.println("=== Chi tiết từng phiên ===");
-        activeAuctions.forEach(Auction::printInfo);
-    }
     /*
      * Hàm này chỉ là in dữ liệu ra màn hình (Read) thôi mà, có thay đổi hay thêm bớt (Write) cái gì đâu
      * Tại sao lại phải cất công gắn thêm cái ổ khóa synchronized làm gì cho hệ thống bị chậm đi?
@@ -204,11 +114,4 @@ public class AuctionManager {
      * count() - Ở cuối băng truyền, đếm xem có phieen đấu giá đã được lọc
      * */
 
-    /**
-     * Dừng scheduler khi shutdown ứng dụng.
-     */
-    public void shutdown() {
-        scheduler.shutdown();
-        System.out.println("[AuctionManager] Scheduler đã dừng.");
-    }
 }
